# PATGPT_support

./: .gitignore
backend/: main.py  pyproject.toml  requirements.txt
backend/src/config/: env_config.py
backend/src/db/: engine.py
backend/src/logger/: log.py
backend/src/modules/auth/: auth_controller.py  auth_helpers.py  auth_model.py  auth_service.py  auth_validation_schema.py
backend/src/modules/conv_and_msg/: conv_and_msg_model.py  conv_and_msg_validation_schema.py
backend/src/modules/memory/: memory_controller.py  memory_model.py  memory_schema.py  memory_service.py
backend/src/modules/patgpt_related/: patgpt_related_controller.py  patgpt_related_model.py  patgpt_related_service.py  patgpt_related_validation_schema.py
backend/src/modules/tickets/: ticket_model.py
backend/src/tools/prompts/: base_prompt.py
backend/src/tools/tool/: about_patgpt.py  memory.py  ticket_tools.py  tool_setup.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  User.tsx  index.css
frontend/src/components/ChatInterface/: AIMessageCard.tsx  ChatBar.tsx  Header.tsx  UserMessageCard.tsx
frontend/src/components/ChatInterface/Sidebar/: Sidebar.tsx  SidebarCell.tsx
